# aikd

./: .gitignore  .mcp.json  BENCHMARK_REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FULL_REVERSE_ENGINEERING.md  PROJECT_CHRONOLOGY.md  README.id.md  README.md  REVERSE_ENGINEERING.md  SECURITY.md  SUBMISSIONS.md  TESTING.id.md  TESTING.md  TEST_REPORT.md  install.ps1  install.sh  smithery.yaml
.github/: CODE_OF_CONDUCT.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_agent.md  question.md
.github/workflows/: ci.yml  crates-io.yml  release.yml
crates/benchmark/: Cargo.toml
crates/benchmark/src/: lib.rs
crates/chunker/: Cargo.toml
crates/chunker/src/: code.rs  lib.rs  markdown.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: agents.rs  config.rs  error.rs  fusion.rs  lib.rs  platform.rs  resource.rs  security.rs  types.rs
crates/embedder/: Cargo.toml
crates/embedder/src/: lib.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: lib.rs
crates/plugin/: Cargo.toml
crates/plugin/src/: lib.rs
crates/scanner/: Cargo.toml
crates/scanner/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  mcp.rs  rest.rs
crates/session/: Cargo.toml
crates/session/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  schema.rs
crates/watcher/: Cargo.toml
crates/watcher/src/: lib.rs
docs/: ARCHITECTURE.md  CONFIGURATION.md  QUICKSTART.md  RECIPE.md
docs/blog/: release-v2.md
docs/social/: UPLOAD-GUIDE.md  devto.md  hackernews.md  product-hunt.md  reddit-localllama.md  reddit-rust.md  twitter.md
docs/social/upload-content/: instagram-caption.txt  instagram-hashtags.txt  linkedin-caption.txt  linkedin-hashtags.txt  threads-caption.txt  threads-hashtags.txt  tiktok-caption.txt  tiktok-hashtags.txt  twitter-caption.txt  twitter-hashtags.txt  youtube-caption.txt  youtube-hashtags.txt
extensions/vscode/: extension.js  package.json
scripts/: create-discord.sh  demo.tape  full-auto.sh  generate-assets.py  generate-frames.py  generate-logo.sh  record-demo.sh  release.sh  setup-env.sh  social-upload.py
