[package]
name = "aikd-benchmark"
version.workspace = true
edition.workspace = true
description = "AIKD benchmark and stress test suite with auto-throttle"

[lib]
name = "aikd_benchmark"
path = "src/lib.rs"

[[bin]]
name = "aikd-benchmark"
path = "src/bin/main.rs"

[dependencies]
aikd-core = { path = "../core" }
aikd-storage = { path = "../storage" }
aikd-indexer = { path = "../indexer" }
aikd-embedder = { path = "../embedder" }
aikd-chunker = { path = "../chunker" }
tokio = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sysinfo = { workspace = true }
serde_json = { workspace = true }
walkdir = { workspace = true }
rayon = { workspace = true }
tempfile = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
reqwest = { workspace = true }
num_cpus = "1"
