[package]
name = "aikd-chunker"
version.workspace = true
edition.workspace = true
description = "AIKD file chunking engine for markdown, text, and structured files"

[dependencies]
aikd-core = { path = "../core" }
pulldown-cmark = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
