[package]
name = "aikd-embedder"
version.workspace = true
edition.workspace = true
description = "AIKD vector embedding engine with resource-adaptive batching"

[dependencies]
aikd-core = { path = "../core" }
fastembed = { workspace = true }
rusqlite = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.12", features = ["blocking"] }
lru = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
